--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <title>Page Title</title>
 </head>
 <body>
-<<<<<<< HEAD
-  <p>First paragraph.</p>
-=======
   <h1>This is a Heading</h1>
+  <p>First paragraph.</p>
+  <p>This is a paragraph.</p>
   <p>This is a paragraph.</p>
   <p>This is another paragraph.</p>
->>>>>>> 6a20259 (resolved conflict)
 </body>
 </html>
